--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,31 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.center {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.text {
+  font-family: 'Yeon Sung', cursive, 'Courier New', Courier, monospace;
+  font-size: 5vw;
+}
+
+.textSmall {
+  font-family: 'Yeon Sung', cursive, 'Courier New', Courier, monospace;
+  font-size: 2vw;
+}
+
+.google-btn {
+  background-color: #dd4b39;
+  color: white;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  margin: 5px 0;
+  opacity: 0.85;
+  display: inline-block;
+  font-size: 17px;
+  line-height: 20px;
+  text-decoration: none; /* remove underline from anchors */
 }
