--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,19 +1,71 @@
-.top {
-    background-image: url(../../Images/homeBg.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 600px;
-    height: 70%;
-    top: 0;
+.bg-logo {
+    background-color: #50FBDF;
+    width: 100%;
+    height: 10vh;
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.bg-text {
-    background-color: rgba(255, 255, 255, 0.8);
+.img-home {
+    padding-top: 10px;
+    border-radius: 20px 20px 0px 0px;
+    height: 65vh;
     width: 100%;
+}
+
+.paper {
+    height: 30vh;
     position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-  }
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 20px 20px 0px 0px;
+    background-color: #f8f8f8;
+}
+
+.btn-signup {
+    background-color: #50FBDF;
+    width: 60%;
+    color: white;
+    padding: 10px 15px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    opacity: 0.9;
+    border-radius: 30px;
+}
+
+.btn-login {
+    background-color: #FFF;
+    width: 60%;
+    padding: 10px 15px;
+    margin: 8px 0;
+    border: 1px solid black;
+    cursor: pointer;
+    opacity: 0.9;
+    border-radius: 30px;
+}
+
+.btn-signup:hover {
+    background-color: #f1f1f1;
+    box-shadow: 0 0 6px #50FBDF;
+    color: black;
+}
+
+.btn-login:hover {
+    background-color: #f1f1f1;
+    box-shadow: 0 0 6px #000;
+    border: none;
+}
+
+@media only screen and (max-width: 700px) {
+    .btn-login {
+        width: 90%;
+    }
+    .btn-signup {
+        width: 90%;
+    }
+}
