--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,98 +1,56 @@
 * {box-sizing: border-box}
 
 .container {
-  padding-right: 16px;
-  padding-left: 16px;
-  padding-bottom: 16px;
+  padding-right: 0px 16px 16px 16px;
+  width: 60%;
 }
 
-input,
-.btn {
+input[type=text], input[type=password] {
   width: 100%;
-  padding: 12px;
-  border: none;
-  border-radius: 4px;
-  margin: 5px 0;
-  opacity: 0.85;
+  padding: 15px;
+  margin: 5px 0 22px 0;
   display: inline-block;
-  font-size: 17px;
-  line-height: 20px;
-  text-decoration: none;
+  border: none;
+  background: #f1f1f1;
 }
 
-input:hover,
-.btn:hover {
-  opacity: 1;
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
 }
 
-input[type=submit] {
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+.loginbtn {
   background-color: #4CAF50;
-  color: white;
+  color: #fff;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
   cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
 }
 
-input[type=submit]:hover {
-  background-color: #45a049;
+.loginbtn:hover {
+  opacity:1;
 }
 
-.col {
-  float: left;
-  width: 50%;
-  margin: auto;
-  padding: 0 50px;
-  margin-top: 6px;
+a {
+  color: dodgerblue;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.vl {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  border: 2px solid #ddd;
-  height: 175px;
-}
-
-.inner {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #f1f1f1;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  padding: 8px 10px;
-}
-
-.hide-md-lg {
-  display: none;
-}
-
-.bottom-container {
-  text-align: center;
-  background-color: #666;
-  border-radius: 0px 0px 4px 4px;
-}
-
-@media screen and (max-width: 650px) {
-  .col {
-    width: 100%;
-    margin-top: 0;
-  }
-  .vl {
-    display: none;
-  }
-  .hide-md-lg {
-    display: block;
-    text-align: center;
-  }
-}
-
-.signin {
+.register {
   padding-top: 16px;
   background-color: #f1f1f1;
   text-align: center;
+}
+
+@media only screen and (max-width: 700px) {
+  .container {
+      width: 90%;
+  }
 }
