--- a/src/Components/Rides/Rides.css
+++ b/src/Components/Rides/Rides.css
@@ -1,15 +1,63 @@
-.root-container {
-    background-image: url(../../Images/optionBg.jpg);
-    height: 91vh;
-    padding: 1em;
+
+.root-container { 
+    height: 100vh;
     color: white;
+    background-image: linear-gradient(to right top, #051937, #0a244e, #142f67, #223a80, #334599);
 }
 
 .root-text {
-    margin: 20px;
-    height: 40vh;
+    padding-top: 20px;
 }
 
 .root-btn {
-    height: 40vh;
+    padding-top: 30px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+.btn-signup {
+    background-color: #50FBDF;
+    width: 60%;
+    color: white;
+    padding: 10px 15px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    opacity: 0.9;
+    border-radius: 30px;
+}
+
+.btn-login {
+    background-color: #FFF;
+    width: 60%;
+    padding: 10px 15px;
+    margin: 8px 0;
+    border: 1px solid black;
+    cursor: pointer;
+    opacity: 0.9;
+    border-radius: 30px;
+}
+
+.btn-signup:hover {
+    background-color: #f1f1f1;
+    box-shadow: 0 0 6px #50FBDF;
+    color: black;
+}
+
+.btn-login:hover {
+    background-color: #f1f1f1;
+    box-shadow: 0 0 6px #000;
+    border: none;
+}
+
+@media only screen and (max-width: 700px) {
+    .btn-login {
+        width: 90%;
+    }
+    .btn-signup {
+        width: 90%;
+    }
 }
