--- a/src/Components/Renter/Renter.css
+++ b/src/Components/Renter/Renter.css
@@ -1,103 +1,104 @@
-
-  
 #form-div {
-    background-color: #00a6c5;
-    padding-left:35px;
-    padding-right:35px;
-    padding-top:35px;
-    padding-bottom:50px;
-    width: 100%;
-    justify-content: center;
-    margin-top:10px;
-    border-radius: 7px;
+  background-color: #f1f1f1;
+  padding: 10px 20px 20px 20px;
+  width: 70%;
+  justify-content: center;
+  border-radius: 7px;
+  box-shadow: 4px 4px 8px 2px rgba( 53, 126, 221, 0.2 );
+}
+
+@media only screen and (max-width: 700px) {
+  #form-div {
+    width: 90%;
+  }
+}
+
+.montform .feedback-input {
+  color:#3c3c3c;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight:500;
+  font-size: 18px;
+  border-radius: 0;
+  line-height: 22px;
+  background-color: #fbfbfb;
+  padding: 13px 13px 13px 54px;
+  margin-bottom: 10px;
+  width:100%;
+  box-sizing: border-box;
+  border: 3px solid rgba(0,0,0,0.1);  
+}
+
+.montform .feedback-input:focus{
+  background: #fff;
+  border: 3px solid #3498db;
+  color: #357edd;
+  outline: none;
+  padding: 13px 13px 13px 54px;
+}
+
+.montform  #name{
+  background-image: url(../../Images/address-book.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat;
 }
   
-  .montform .feedback-input {
-      color:#3c3c3c;
-      font-family: Helvetica, Arial, sans-serif;
-    font-weight:500;
-      font-size: 18px;
-      border-radius: 0;
-      line-height: 22px;
-      background-color: #fbfbfb;
-      padding: 13px 13px 13px 54px;
-      margin-bottom: 10px;
-      width:100%;
-      box-sizing: border-box;
-      border: 3px solid rgba(0,0,0,0);
-  }
-  /*Inputs styles*/
-  .montform .feedback-input:focus{
-      background: #fff;
-      border: 3px solid #3498db;
-      color: #3498db;
-      outline: none;
-    padding: 13px 13px 13px 54px;
-  }
+.montform  #name:focus{
+  background-image: url(../../Images/address-book.svg);
+  background-size: 30px 30px;
+  background-position: 8px 5px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat;
+}
   
+.montform  #email{
+  background-image: url(../../Images/mail.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat;
+}
   
-  /* Icons ---------------------------------- */
-  .montform  #name{
-      background-image: url(../../Images/address-book.svg);
-      background-size: 30px 30px;
-      background-position: 11px 8px;
-      background-repeat: no-repeat;
-  }
+.montform  #email:focus{
+  background-image: url(../../Images/mail.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat;
+}
   
-  .montform  #name:focus{
-      background-image: url(../../Images/address-book.svg);
-      background-size: 30px 30px;
-      background-position: 8px 5px;
-    background-position: 11px 8px;
-      background-repeat: no-repeat;
-  }
+.montform  #comment{
+  background-image: url(../../Images/pencil.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat;
+}
   
-  .montform  #email{
-      background-image: url(../../Images/mail.svg);
-      background-size: 30px 30px;
-      background-position: 11px 8px;
-      background-repeat: no-repeat;
-  }
-  
-  .montform  #email:focus{
-      background-image: url(../../Images/mail.svg);
-      background-size: 30px 30px;
-    background-position: 11px 8px;
-      background-repeat: no-repeat;
-  }
-  
-  .montform  #comment{
-      background-image: url(../../Images/pencil.svg);
-      background-size: 30px 30px;
-      background-position: 11px 8px;
-      background-repeat: no-repeat;
-  }
-  
-  .montform  textarea {
-      width: 100%;
-      height: 150px;
-      line-height: 150%;
-      resize:vertical;
-  }
-  
-  .montform  input:hover, .montform  textarea:hover,
-  .montform  input:focus, .montform  textarea:focus {
-      background-color:#e6e6e6;
-  }
-  
-  .button-blue{
-      font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-      width: 100%;
-      border: #fbfbfb solid 4px;
-      cursor:pointer;
-      background-color: #3498db;
-      color:white;
-      font-size:24px;
-      padding-top:22px;
-      padding-bottom:22px;
-      transition: all 0.3s;
-    margin-top:-4px;
-    font-weight:700;
-  }
-  
-  
+.montform  textarea {
+  width: 100%;
+  line-height: 150%;
+  resize:vertical;
+}
+
+.montform  input:hover, .montform  textarea:hover,
+.montform  input:focus, .montform  textarea:focus {
+  background-color:#e6e6e6;
+}
+
+.button-blue{
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 100%;
+  border: #fbfbfb solid 1px;
+  cursor:pointer;
+  background-color: #357edd;
+  color:white;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+}
+
+.add-btn {
+  position: absolute;
+  bottom: 20;
+  right: 5;
+}
