--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,10 @@
   border: none;
   background-color: white;
 }
+
+@media only screen and (min-width: 1200px) {
+  .bicycleImage {
+    height: 180px;
+    width:  180px;
+  }
+}
