--- a/src/Components/Rentee/Rentee.css
+++ b/src/Components/Rentee/Rentee.css
@@ -32,3 +32,14 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: #45a049;
 }
+
+.cardBar2 {
+    position: relative;
+    background-color: rgba(187, 187, 187, 0.6);
+    border-radius: 20px;
+    box-shadow: 0 0 6px #000;
+    width: 80%;
+    height: 60vh;
+    margin-top: 20px;
+    padding: 20px 20px 0px 20px;
+}
